--- a/GucciBazaar/Views/Product/ProductInfo.cshtml
+++ b/GucciBazaar/Views/Product/ProductInfo.cshtml
@@ -26,6 +26,8 @@
             @Html.DisplayFor(modelItem => Model.Rating)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => Model.ImagePath)
+            <a href="@Html.DisplayFor(modelItem => Model.ImagePath)">
+                <img class="td-icons" src="https://cdn1.iconfinder.com/data/icons/social-17/48/photos2-512.png" />
+            </a>
         </td>
 </div>
