--- a/GucciBazaar/Views/Shared/_LoginPartial.cshtml
+++ b/GucciBazaar/Views/Shared/_LoginPartial.cshtml
@@ -5,18 +5,27 @@
     {
     @Html.AntiForgeryToken()
 
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName() + "!", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
-        </li>
-        <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
-    </ul>
+<div class="login">
+    <div class="dropdown-register">
+        <img class="icons" style="margin:10px 20px 0px 20px;"
+             src="https://cdn2.iconfinder.com/data/icons/4web-3/139/header-account-image-line-512.png">
+        <div class="dropdown-register-content">
+            @Html.ActionLink("My profile", "Index", "Manage", routeValues: null, htmlAttributes: new { title = "Manage" })
+            <a href="javascript:document.getElementById('logoutForm').submit()">Log off</a>
+        </div>
+    </div>    
+</div>
     }
 }
 else
 {
-    <ul class="nav navbar-nav navbar-right">
-        <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
-    </ul>
+    <div class="login">
+        <div class="dropdown-register">
+            <img class="icons" style="margin:10px 20px 0px 20px;" src="https://cdn2.iconfinder.com/data/icons/4web-3/139/header-account-image-line-512.png">
+            <div class="dropdown-register-content">
+                @Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })
+                @Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+            </div>
+        </div>
+    </div>
 }
