--- a/GucciBazaar/Views/Category/New.cshtml
+++ b/GucciBazaar/Views/Category/New.cshtml
@@ -12,11 +12,18 @@
 <body>
     <div>
         <br />
-        <form method="post" action="/Category/New">
-            <label>Category Name</label>
-            <input type="text" name="Name" />
-            <button type="submit">Adauga Categorie</button>
+        <form class="form-container" method="post" action="/Category/New">
+            <h4>Add new category</h4>
+            <div style="margin:30px 0px 30px 0px">
+                <label>Category Name:</label>
+                <input type="text" name="Name" />
+            </div>
+            <button type="submit" class="btn-edit">Adauga Categorie</button>
         </form>
+
+    </div>
+    <div style="margin-top:20%">
+        <a href="/Category/Index"><img class="icons" src="https://image.flaticon.com/icons/svg/93/93634.svg" /></a>
     </div>
 </body>
 </html>
