--- a/GucciBazaar/Views/Product/New.cshtml
+++ b/GucciBazaar/Views/Product/New.cshtml
@@ -4,15 +4,12 @@
     ViewBag.Title = "New";
 }
 
-<h2>New</h2>
-
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>Product</h4>
+    <div class="form-container">
+        <h4>Add new product</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(m => m.UserId)
@@ -57,17 +54,13 @@
             </div>
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
+        <input type="submit" value="Create" class="btn-edit" />
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+    <div>
+        <a href="/Product/Index"><img class="icons" src="https://image.flaticon.com/icons/svg/93/93634.svg" /></a>
+    </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
