--- a/GucciBazaar/Views/ProductAdditionRequests/New.cshtml
+++ b/GucciBazaar/Views/ProductAdditionRequests/New.cshtml
@@ -3,16 +3,12 @@
 @{
     ViewBag.Title = "New";
 }
-
-<h2>New</h2>
-
-
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>ProductRequest</h4>
+    <div class="form-container">
+        <h4>Add new product request</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(m => m.UserId)
@@ -57,17 +53,12 @@
                 @Html.ValidationMessageFor(model => model.ImagePath, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
+                <input type="submit" value="Create" class="btn-edit"/>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    <a href="/ProductAdditionRequests/Index"><img class="icons" src="https://image.flaticon.com/icons/svg/93/93634.svg"/></a>
 </div>
 
 @section Scripts {
