--- a/GucciBazaar/Views/Users/Index.cshtml
+++ b/GucciBazaar/Views/Users/Index.cshtml
@@ -12,32 +12,47 @@
 </head>
 <body>
     <div>
-        <ol class="breadcrumb">
-            <li><h3>@ViewBag.Title</h3></li>
-        </ol>
-        @foreach (var user in Model)
-        {
-            <div class="panel-heading">Nume utilizator: @user.UserName</div>
-            <div class="panel-body">
-                <i class="glyphicon glyphicon-envelope"></i> Email utilizator:
-                <span class="label label-default">@user.Email</span>
-                <br /><br />
-
-                @if (@user.PhoneNumber != null)
-                {
-                <i class="glyphicon glyphicon-phone"></i>@:Telefon utilizator:<span class="label label-default">@user.PhoneNumber</span>
+        <div class="title">
+            <h3>@ViewBag.Title</h3>
+        </div>
+        <div>
+        <ul>
+            @foreach (var user in Model)
+            {
+                <li class="utilizator">@user.UserName
+                    <a  href="/Users/Show/@user.Id">
+                        <img class="small-icons" src="http://icons.iconarchive.com/icons/icons8/ios7/512/Programming-Show-Property-icon.png" />
+                    </a>
+                    @*<a  href="/Users/Delete/@user.Id">
+                        <img class="small-icons" src="https://cdn2.iconfinder.com/data/icons/apple-inspire-white/100/Apple-64-512.png"/>
+                    </a>*@
+            </li>
             }
-            </div>
-            <div class="panel-footer">
-                <a class="btn btn-sm btn-success" href="/Users/Show/@user.Id">
-                    Arata utilizator
-                </a>
-                <a class="btn btn-sm btn-success" href="/Users/Edit/@user.Id">
-                    Editare utilizator
-                </a>
-            </div>
-            <br /><br />
-        }
+        </ul>
+        @*@foreach (var user in Model)
+            {
+                <div class="panel-heading">Nume utilizator: @user.UserName</div>
+                <div class="panel-body">
+                    <i class="glyphicon glyphicon-envelope"></i> Email utilizator:
+                    <span class="label label-default">@user.Email</span>
+                    <br /><br />
+
+                    @if (@user.PhoneNumber != null)
+                    {
+                    <i class="glyphicon glyphicon-phone"></i>@:Telefon utilizator:<span class="label label-default">@user.PhoneNumber</span>
+                }
+                </div>
+                <div class="panel-footer">
+                    <a class="btn btn-sm btn-success" href="/Users/Show/@user.Id">
+                        Arata utilizator
+                    </a>
+                    <a class="btn btn-sm btn-success" href="/Users/Edit/@user.Id">
+                        Editare utilizator
+                    </a>
+                </div>
+                <br /><br />
+            }*@
     </div>
+    @Scripts.Render("~/Scripts/afisareUtilizatori.js")
 </body>
 </html>
